--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.16.1",
+    "config": "^1.25.1",
     "cors": "^2.8.1",
+    "express": "^4.14.1",
     "lodash": "^4.17.4",
     "morgan": "^1.8.1",
+    "nodemon": "^1.11.0",
     "socket.io": "^1.7.3",
     "uuid": "^3.0.1"
   }
